# CS4080-Homework

Chapter 1-3/Ch1/: linked_list.c
Chapter 1-3/Ch3/: sample.lox
Chapter 4-5/: Main.hs
Lox Implementation/lox/: AstPrinter.java  Interpreter.java  Lox.java  RpnPrinter.java  Scanner.java
Lox Implementation/scripts/: InitBenchmark.lox  List.lox  Test.lox  binaryOpBenchmark.lox  fibonacciBenchmark.lox  sso_threshold_benchmark.lox  vectors.lox
Lox Implementation/tool/: GenerateAst.java
challenges/Ch 10 Challenge 2/: GenerateAst.java  Interpreter.java  LoxFunction.java  Parser.java
challenges/Ch 11 Challenge 3/: Resolver.java
challenges/Ch 11 Challenge 4/: Interpreter.java  Resolver.java
challenges/Ch 12 Challenge 1/: GenerateAst.java  Interpreter.java  LoxClass.java
challenges/Ch 12 Challenge 2/: Interpreter.java  LoxFunction.java  Parser.java  Resolver.java
challenges/Ch 13 Challenge 1/: GenerateAst.java  Interpreter.java  LoxClass.java  Parser.java  Resolver.java  Stmt.java
challenges/Ch 13 Challenge 2/: LoxClass.java  LoxFunction.java  Resolver.java
challenges/Ch 13 Challenge 3/: Interpreter.java  LoxList.java
challenges/Ch 14 Challenge 1/: chunk.c  chunk.h  debug.c
challenges/Ch 14 Challenge 2/: CMakeLists.txt  chunk.c  chunk.h  debug.c
challenges/Ch 14 Challenge 3/: memory_hardcore.c  memory_hardcore.h
challenges/Ch 15 Challenge 3/: vm.c  vm.h
challenges/Ch 15 Challenge 4/: vm.c
clox/: CMakeLists.txt  chunk.c  common.h  compiler.c  debug.c  main.c  memory.c  memory.h  object.c  object.h  scanner.c  table.c  table.h  value.c  vm.c
(+103 files in other folders)
